--- a/crates/matrix-sdk-indexeddb/Cargo.toml
+++ b/crates/matrix-sdk-indexeddb/Cargo.toml
@@ -15,10 +15,13 @@ rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
 
 [features]
 default = ["e2e-encryption", "state-store", "event-cache-store", "media-store"]
-event-cache-store = ["dep:matrix-sdk-base", "media-store"]
-media-store = ["dep:matrix-sdk-base"]
-state-store = ["dep:matrix-sdk-base", "growable-bloom-filter"]
-e2e-encryption = ["dep:matrix-sdk-base", "dep:matrix-sdk-crypto"]
+event-cache-store = ["dep:matrix-sdk-base", "media-store", "indexed-type-serializer"]
+media-store = ["dep:matrix-sdk-base", "indexed-type-serializer"]
+state-store = ["dep:matrix-sdk-base", "growable-bloom-filter", "safe-encode-traits"]
+e2e-encryption = ["dep:matrix-sdk-base", "dep:matrix-sdk-crypto", "safe-encode-serializer"]
+safe-encode-traits = []
+safe-encode-serializer = ["dep:matrix-sdk-crypto", "safe-encode-traits"]
+indexed-type-serializer = ["safe-encode-serializer"]
 testing = ["matrix-sdk-crypto?/testing"]
 experimental-encrypted-state-events = [
     "matrix-sdk-crypto?/experimental-encrypted-state-events"
