--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,7 +68,7 @@ rand = "0.8.5"
 regex = "1.12.2"
 reqwest = { version = "0.12.24", default-features = false }
 rmp-serde = "1.3.0"
-ruma = { git = "https://github.com/ruma/ruma", rev = "a67081e402dce14365089b34f50489dacc9c53b5", features = [
+ruma = { version = "0.14.1", features = [
     "client-api-c",
     "compat-upload-signatures",
     "compat-arbitrary-length-ids",
