--- a/examples/rtc_livekit_join/Cargo.toml
+++ b/examples/rtc_livekit_join/Cargo.toml
@@ -19,6 +19,9 @@ futures-util.workspace = true
 matrix-sdk = { path = "../../crates/matrix-sdk" }
 matrix-sdk-rtc = { path = "../../crates/matrix-sdk-rtc" }
 matrix-sdk-rtc-livekit = { path = "../../crates/matrix-sdk-rtc-livekit" }
+reqwest.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tracing.workspace = true
 tracing-subscriber.workspace = true
