--- a/examples/rtc_livekit_join/Cargo.toml
+++ b/examples/rtc_livekit_join/Cargo.toml
@@ -20,6 +20,7 @@ matrix-sdk = { path = "../../crates/matrix-sdk" }
 matrix-sdk-rtc = { path = "../../crates/matrix-sdk-rtc" }
 matrix-sdk-rtc-livekit = { path = "../../crates/matrix-sdk-rtc-livekit" }
 reqwest.workspace = true
+ruma.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
