--- a/examples/rtc_livekit_join/Cargo.toml
+++ b/examples/rtc_livekit_join/Cargo.toml
@@ -26,6 +26,7 @@ serde_json.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tracing.workspace = true
 tracing-subscriber.workspace = true
+url.workspace = true
 
 [lints]
 workspace = true
