--- a/crates/matrix-sdk-rtc-livekit/Cargo.toml
+++ b/crates/matrix-sdk-rtc-livekit/Cargo.toml
@@ -14,8 +14,8 @@ rustdoc-args = ["--generate-link-to-definition"]
 [features]
 default = ["native-tls"]
 
-native-tls = ["matrix-sdk-rtc/native-tls"]
-rustls-tls = ["matrix-sdk-rtc/rustls-tls"]
+native-tls = ["matrix-sdk-rtc/native-tls", "livekit/native-tls"]
+rustls-tls = ["matrix-sdk-rtc/rustls-tls", "livekit/rustls-tls-native-roots"]
 js = ["matrix-sdk-rtc/js"]
 crypto = ["matrix-sdk-crypto", "matrix-sdk/e2e-encryption"]
 
