--- a/examples/rtc_livekit_join/Cargo.toml
+++ b/examples/rtc_livekit_join/Cargo.toml
@@ -23,6 +23,7 @@ reqwest.workspace = true
 ruma.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+sha2.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tracing.workspace = true
 tracing-subscriber.workspace = true
@@ -34,3 +35,4 @@ workspace = true
 
 [features]
 v4l2 = ["dep:v4l"]
+e2ee-per-participant = ["matrix-sdk-rtc-livekit/crypto"]
