--- a/examples/rtc_livekit_join/Cargo.toml
+++ b/examples/rtc_livekit_join/Cargo.toml
@@ -18,6 +18,7 @@ async-trait.workspace = true
 base64.workspace = true
 futures-util.workspace = true
 matrix-sdk = { path = "../../crates/matrix-sdk" }
+matrix-sdk-base = { path = "../../crates/matrix-sdk-base" }
 matrix-sdk-rtc = { path = "../../crates/matrix-sdk-rtc" }
 matrix-sdk-rtc-livekit = { path = "../../crates/matrix-sdk-rtc-livekit" }
 reqwest.workspace = true
