--- a/examples/rtc_livekit_join/Cargo.toml
+++ b/examples/rtc_livekit_join/Cargo.toml
@@ -19,6 +19,7 @@ base64.workspace = true
 futures-util.workspace = true
 matrix-sdk = { path = "../../crates/matrix-sdk" }
 matrix-sdk-base = { path = "../../crates/matrix-sdk-base" }
+matrix-sdk-crypto = { path = "../../crates/matrix-sdk-crypto" }
 matrix-sdk-rtc = { path = "../../crates/matrix-sdk-rtc" }
 matrix-sdk-rtc-livekit = { path = "../../crates/matrix-sdk-rtc-livekit" }
 reqwest.workspace = true
