--- a/examples/rtc_livekit_join/Cargo.toml
+++ b/examples/rtc_livekit_join/Cargo.toml
@@ -38,4 +38,5 @@ workspace = true
 
 [features]
 v4l2 = ["dep:v4l"]
+e2e-encryption = ["matrix-sdk/e2e-encryption"]
 e2ee-per-participant = ["matrix-sdk-rtc-livekit/crypto", "matrix-sdk/experimental-send-custom-to-device"]
