--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,8 +107,8 @@ tracing-appender = "0.2.3"
 tracing-core = "0.1.34"
 tracing-subscriber = "0.3.20"
 unicode-normalization = "0.1.25"
-uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "870b814" }
-uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs", rev = "870b814" }
+uniffi = "0.31.0"
+uniffi_bindgen = "0.31.0"
 url = "2.5.7"
 uuid = "1.18.1"
 vergen-gitcl = "1.0.8"
