--- a/crates/matrix-sdk-crypto/Cargo.toml
+++ b/crates/matrix-sdk-crypto/Cargo.toml
@@ -62,7 +62,7 @@ matrix-sdk-test = { workspace = true, optional = true }  # feature = testing onl
 pbkdf2.workspace = true
 rand.workspace = true
 rmp-serde.workspace = true
-ruma = { workspace = true, features = ["rand", "canonical-json", "unstable-msc3814"] }
+ruma = { workspace = true, features = ["rand", "unstable-msc3814"] }
 serde = { workspace = true, features = ["derive", "rc"] }
 serde_json.workspace = true
 sha2.workspace = true
