--- a/examples/rtc_livekit_join/Cargo.toml
+++ b/examples/rtc_livekit_join/Cargo.toml
@@ -41,3 +41,4 @@ v4l2 = ["dep:v4l"]
 e2e-encryption = ["matrix-sdk/e2e-encryption"]
 e2ee-per-participant = ["matrix-sdk-rtc-livekit/crypto", "matrix-sdk/experimental-send-custom-to-device"]
 experimental-widgets = ["matrix-sdk/experimental-widgets"]
+sqlite = ["matrix-sdk/sqlite"]
